[gd_scene load_steps=17 format=2]

[ext_resource path="res://Asset/Resource/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_idle_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Asset/Resource/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_run_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Asset/Resource/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_knife.png" type="Texture" id=3]
[ext_resource path="res://Asset/Scripts/Enemy.gd" type="Script" id=4]
[ext_resource path="res://Asset/Scripts/Enemy_stateMachine.gd" type="Script" id=5]
[ext_resource path="res://Asset/Scripts/HitBox.gd" type="Script" id=6]
[ext_resource path="res://Asset/Scripts/HurtBox.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WeaponPoint/weapon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("WeaponPoint/weapon:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("WeaponPoint/AttackDetector:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponPoint/weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, 0 ), Vector2( -8, 0 ), Vector2( 8, 4.76837e-07 ), Vector2( 40, 7.94728e-08 ), Vector2( -8, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponPoint/weapon:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 41.2812, 39.4877, 49.2708, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponPoint/AttackDetector:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.960784, 0.0666667, 0.0666667, 1 ), Color( 0.960784, 0.0666667, 0.0666667, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.235294 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.254902 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 24.0

[sub_resource type="CircleShape2D" id=7]
radius = 17.8885

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0392157, 0.815686, 0.317647, 0.701961 )
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color( 0.0588235, 0.0117647, 0.0117647, 0.701961 )
corner_radius_top_right = 4
corner_radius_bottom_right = 4

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.886275, 0.027451, 0.027451, 0.6 )
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.121569, 0.0117647, 0.0117647, 1 )
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[node name="Enemy" type="Node2D"]
script = ExtResource( 4 )

[node name="Enemy_stateMachine" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 5 )
anims/hit = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 6 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 4 )

[node name="WeaponPoint" type="Node2D" parent="."]

[node name="weapon" type="Sprite" parent="WeaponPoint"]
position = Vector2( -8, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="AttackDetector" type="Area2D" parent="WeaponPoint"]
collision_layer = 0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponPoint/AttackDetector"]
position = Vector2( 40, 0 )
shape = SubResource( 7 )

[node name="Tween" type="Tween" parent="."]

[node name="HealthBar" type="Control" parent="."]
margin_left = -56.0
margin_top = -56.0
margin_right = 56.0
margin_bottom = -40.0

[node name="Health_progress" type="ProgressBar" parent="HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Tween" type="Tween" parent="HealthBar"]
